# is-aruco-detector

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  aruco.cpp  bootstrap.sh  build.sh  conanfile.py  deployment.yaml  options.json  service.cpp  test.cpp
aruco/: CMakeLists.txt  aruco.cpp  aruco.hpp
etc/conf/: options.json
etc/docker/: Dockerfile
etc/k8s/: deployment.yaml
service/: calibration_fetcher.cpp  calibration_fetcher.hpp  service.cpp  utils.cpp  utils.hpp
src/aruco/: CMakeLists.txt  aruco.cpp  aruco.hpp
src/is/aruco/: CMakeLists.txt  aruco.cpp  aruco.hpp
src/is/aruco-service/: CMakeLists.txt  calibration-fetcher.cpp  calibration-fetcher.hpp  service.cpp
src/service/: CMakeLists.txt  calibration_fetcher.cpp  service.cpp
src/service/conf/: options.proto
